[gd_scene load_steps=4 format=3 uid="uid://cd2igq1jveoo8"]

[ext_resource type="Script" path="res://scripts/ui/ProductInfoPopup.gd" id="1_iu7ik"]
[ext_resource type="Texture2D" uid="uid://dje2j5j6nxdnn" path="res://assets/ui/star.png" id="2_2a1a7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87eev"]
bg_color = Color(0.2, 0.2, 0.2, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="ProductInfoPopup" type="Panel"]
custom_minimum_size = Vector2(350, 300)
offset_right = 350.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_87eev")
script = ExtResource("1_iu7ik")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 15.0
offset_right = 150.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Название продукта"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Описание продукта. Здесь будет размещено детальное описание продукта, его характеристики и особенности."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QualityStars" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -10.0
offset_right = 60.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("2_2a1a7")
expand_mode = 2
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("2_2a1a7")
expand_mode = 2
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("2_2a1a7")
expand_mode = 2
stretch_mode = 5

[node name="BasePriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Базовая цена: 50₽"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.5
max_value = 2.0
step = 0.05
value = 1.0

[node name="FinalPriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 75.0
offset_right = 120.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Цена продажи: 50₽"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Выбросить"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"